--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "bootstrap": "^4.5.3",
+    "bootswatch": "^5.1.3",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^7.1.2",
+    "ngx-toastr": "^14.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.16",
+    "@angular-devkit/build-angular": "^12.2.8",
     "@angular/cli": "~12.2.16",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
